; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_crc32.c_CRC32_FromFile.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_crc32.c_CRC32_FromFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUF_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CRC32_FromFile(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %9 = load i32, i32* @BUF_SIZE, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %5, align 8
  %12 = alloca i32, i64 %10, align 16
  store i64 %10, i64* %6, align 8
  store i32 -1, i32* %7, align 4
  br label %13

13:                                               ; preds = %25, %2
  %14 = load i32, i32* @BUF_SIZE, align 4
  %15 = load i32*, i32** %3, align 8
  %16 = call i64 @fread(i32* %12, i32 1, i32 %14, i32* %15)
  store i64 %16, i64* %8, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load i64, i64* %8, align 8
  %19 = call i32 @CRC32_Update(i32 %17, i32* %12, i64 %18)
  store i32 %19, i32* %7, align 4
  %20 = load i64, i64* %8, align 8
  %21 = load i32, i32* @BUF_SIZE, align 4
  %22 = sext i32 %21 to i64
  %23 = icmp ult i64 %20, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %13
  br label %26

25:                                               ; preds = %13
  br label %13

26:                                               ; preds = %24
  %27 = load i32, i32* %7, align 4
  %28 = xor i32 %27, -1
  %29 = load i32*, i32** %4, align 8
  store i32 %28, i32* %29, align 4
  %30 = load i32*, i32** %3, align 8
  %31 = call i32 @feof(i32* %30)
  %32 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %32)
  ret i32 %31
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @fread(i32*, i32, i32, i32*) #2

declare dso_local i32 @CRC32_Update(i32, i32*, i64) #2

declare dso_local i32 @feof(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
